--- a/login.html
+++ b/login.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login | Gestão de Produtos</title>
+    <title>Login | Controle de Validades</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
       :root {
         --bg-primary: #f5f7fb;
@@ -76,6 +77,11 @@
         place-items: center;
         font-weight: 800;
         box-shadow: 0 12px 36px rgba(37, 99, 235, 0.28);
+      }
+      .brand-logo {
+        height: 46px;
+        width: auto;
+        border-radius: 12px;
       }
       h1 {
         font-size: 1.4rem;
@@ -176,9 +182,9 @@
   <body>
     <div class="card">
       <div class="brand">
-        <div class="brand-mark">GP</div>
+        <img src="logo.png" alt="Controle de Validades" class="brand-logo" />
         <div>
-          <h1>Gestão de Produtos</h1>
+          <h1>Controle de Validades</h1>
           <p class="lead">Acesse sua conta para visualizar e cadastrar produtos.</p>
         </div>
       </div>
